# jons-mcp-typescript

./: .gitignore  README.md  pyproject.toml
src/jons_mcp_typescript/: __init__.py  constants.py  daemon_client.py  exceptions.py  lsp_client.py  schemas.py  semantic.py  server.py  utils.py  workspace.py
src/jons_mcp_typescript/daemon/: eslint-manager.js  index.js  package-lock.json  package.json  prettier-manager.js  resolver.js
src/jons_mcp_typescript/tools/: __init__.py  formatting.py  intelligence.py  language.py  linting.py  unified.py
tests/: conftest.py  test_daemon_client.py  test_daemon_protocol.py  test_integration.py  test_lsp_client.py  test_packaging.py  test_public_format_lint_tools.py  test_public_intelligence_tools.py  test_public_language_tools.py  test_public_unified_tools.py  test_tool_correctness.py  test_tool_security.py  test_utils.py  test_workspace.py
